# MA-LOAM

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  package.xml
config/: aloam_param.yaml  config.yaml
launch/: empty_room.launch  env_template.launch  env_template_bag.launch  gazebo_environment.launch  haus_fzk.launch  haus_fzk_bag.launch  simple_corridor.launch  skarpnack.launch  skarpnack_no_rails.launch
launch/aloam_mod/: aloam_velodyne_VLP_16.launch
resources/bags/: simple_corridor_gt.bag
resources/bags/div/: skarpnack_no_rails_diverge.bag  skarpnack_no_rails_fast.bag
resources/bags/haus_fzk/: haus_fzk_aloam.bag  haus_fzk_cicp.bag  haus_fzk_gt.bag  haus_fzk_ma_loam.bag
resources/bags/haus_fzk/clean/: haus_fzk_clean_def.bag  haus_fzk_clean_def_cicp.bag  haus_fzk_clean_el2_mw1_5.bag
resources/bags/simple_corridor/: simple_corridor_aloam.bag  simple_corridor_cicp.bag  simple_corridor_ma_loam.bag
resources/bags/skarpnack_no_rails/: skarpnack_no_rails_gt.bag
resources/environments/haus_fzk/: haus_fzk.pcd  haus_fzk.stl  haus_fzk.world  haus_fzk_clean.pcd  haus_fzk_clean.stl
resources/environments/simple_corridor/: simple_corridor.dae  simple_corridor.stl  simple_corridor.world
resources/environments/skarpnack/: skarpnack.dae  skarpnack.stl  skarpnack.world
resources/environments/skarpnack_no_rails/: skarpnack_no_rails.stl  skarpnack_no_rails.world
resources/pcls/: simple_corridor_sample.pcd  simple_corridor_sample.txt
resources/urdf/: robot_description.xacro  vlp_16.xacro
rviz/: config.rviz  empty_room.rviz
rviz/aloam_mod/: aloam_velodyne_mapping.rviz
scripts/: generate_env_pcl.py  publish_normals.py  set_model_pose.py  set_model_state.py  set_model_twist.py  tf_sensor.py
scripts/dgr_mod/: deep_global_pose_estimation.py
scripts/dgr_mod/core/: deep_global_registration.py  trainer.py
scripts/dgr_mod/dataloader/: kitti_loader.py
scripts/dgr_mod/model/: resunet.py
scripts/dgr_mod/util/: pointcloud.py
src/: cluster_icp.cpp  cluster_icp_ros.cpp  main.cpp
src/aloam_mod/: kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
src/ma_loam/: cluster_icp.h  cluster_icp_ros.h  utils.h
src/ma_loam/aloam_mod/: lidarFactor.hpp
